--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "webpack-dev-middleware": "^1.10.2"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.16.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "fetch": "^1.1.0",
     "mongoose": "^4.9.8",
+    "node-rest-client": "^3.1.0",
+    "node-schedule": "^1.2.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -38,6 +40,7 @@
     "react-transform": "0.0.3",
     "react-transform-catch-errors": "^1.0.2",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "socket.io": "^2.0.3"
   }
 }
