--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "webpack-dev-middleware": "^1.10.2"
   },
   "dependencies": {
+    "async-polling": "^0.2.1",
     "axios": "^0.16.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "fetch": "^1.1.0",
+    "html-react-parser": "^0.3.5",
+    "material-ui": "^1.0.0-alpha.20",
     "mongoose": "^4.9.8",
     "node-rest-client": "^3.1.0",
     "node-schedule": "^1.2.3",
+    "random-color": "^1.0.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -41,6 +45,8 @@
     "react-transform-catch-errors": "^1.0.2",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "sse": "0.0.6",
+    "valid-url": "^1.0.9"
   }
 }
