--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "async-polling": "^0.2.1",
     "axios": "^0.16.2",
     "body-parser": "^1.17.1",
+    "chart.js": "^1.1.1",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "fetch": "^1.1.0",
@@ -34,8 +35,9 @@
     "node-rest-client": "^3.1.0",
     "node-schedule": "^1.2.3",
     "random-color": "^1.0.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-chartjs": "^0.8.0",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
