--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "async-polling": "^0.2.1",
     "axios": "^0.16.2",
     "body-parser": "^1.17.1",
-    "chart.js": "^1.1.1",
+    "chart.js": "^2.6.0",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "fetch": "^1.1.0",
@@ -37,6 +37,7 @@
     "random-color": "^1.0.1",
     "react": "^15.6.1",
     "react-chartjs": "^0.8.0",
+    "react-chartjs-2": "^2.1.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
