--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.1",
     "chart.js": "^2.6.0",
+    "email-validator": "^1.0.7",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "fetch": "^1.1.0",
