--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "body-parser": "^1.17.1",
     "chart.js": "^2.6.0",
     "email-validator": "^1.0.7",
+    "expect": "^1.20.2",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "fetch": "^1.1.0",
     "html-react-parser": "^0.3.5",
+    "jest": "^20.0.4",
     "material-ui": "^1.0.0-alpha.20",
     "mongoose": "^4.9.8",
     "node-rest-client": "^3.1.0",
