--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "engines": {
+        "node": "8.1.0"
+    },
     "scripts": {
         "start": "nodemon server/server.js --exec babel-node",
         "build": "webpack --watch",
@@ -12,48 +15,48 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "babel-cli": "^6.24.1",
-        "babel-loader": "^7.0.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-latest": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-2": "^6.24.1",
-        "nodemon": "^1.11.0",
-        "webpack": "^2.5.1",
-        "webpack-dev-middleware": "^1.10.2"
+        "babel-cli": "6.24.1",
+        "babel-loader": "7.0.0",
+        "babel-preset-es2015": "6.24.1",
+        "babel-preset-latest": "6.24.1",
+        "babel-preset-react": "6.24.1",
+        "babel-preset-stage-2": "6.24.1",
+        "nodemon": "1.11.0",
+        "webpack": "2.5.1",
+        "webpack-dev-middleware": "1.10.2"
     },
     "dependencies": {
-        "async-polling": "^0.2.1",
-        "axios": "^0.16.2",
-        "body-parser": "^1.17.1",
-        "chart.js": "^2.6.0",
-        "email-validator": "^1.0.7",
-        "expect": "^1.20.2",
-        "express": "^4.15.2",
-        "express-handlebars": "^3.0.0",
-        "fetch": "^1.1.0",
-        "html-react-parser": "^0.3.5",
-        "jest": "^20.0.4",
-        "material-ui": "^1.0.0-alpha.20",
-        "mongoose": "^4.9.8",
-        "node-rest-client": "^3.1.0",
-        "node-schedule": "^1.2.3",
-        "randomcolor": "^0.5.3",
-        "react": "^15.6.1",
-        "react-chartjs": "^0.8.0",
-        "react-chartjs-2": "^2.1.0",
-        "react-dom": "^15.6.1",
-        "react-redux": "^5.0.4",
-        "react-router": "^4.1.1",
-        "react-router-dom": "^4.1.1",
-        "react-router-redux": "^4.0.8",
-        "react-tools": "^0.13.3",
+        "async-polling": "0.2.1",
+        "axios": "0.16.2",
+        "body-parser": "1.17.1",
+        "chart.js": "2.6.0",
+        "email-validator": "1.0.7",
+        "expect": "1.20.2",
+        "express": "4.15.2",
+        "express-handlebars": "3.0.0",
+        "fetch": "1.1.0",
+        "html-react-parser": "0.3.5",
+        "jest": "20.0.4",
+        "material-ui": "1.0.0-alpha.20",
+        "mongoose": "4.9.8",
+        "node-rest-client": "3.1.0",
+        "node-schedule": "1.2.3",
+        "randomcolor": "0.5.3",
+        "react": "15.6.1",
+        "react-chartjs": "0.8.0",
+        "react-chartjs-2": "2.1.0",
+        "react-dom": "15.6.1",
+        "react-redux": "5.0.4",
+        "react-router": "4.1.1",
+        "react-router-dom": "4.1.1",
+        "react-router-redux": "4.0.8",
+        "react-tools": "0.13.3",
         "react-transform": "0.0.3",
-        "react-transform-catch-errors": "^1.0.2",
-        "redux": "^3.6.0",
-        "redux-devtools-extension": "^2.13.2",
-        "socket.io": "^2.0.3",
+        "react-transform-catch-errors": "1.0.2",
+        "redux": "3.6.0",
+        "redux-devtools-extension": "2.13.2",
+        "socket.io": "2.0.3",
         "sse": "0.0.6",
-        "valid-url": "^1.0.9"
+        "valid-url": "1.0.9"
     }
 }
